--- a/src/pages/components-overview/style.module.css
+++ b/src/pages/components-overview/style.module.css
@@ -1,16 +1,58 @@
 
 .insideContainer{
     margin-top: -2%;
-    width:100%;
-    height:100px;
+    width:10%;
+    height:400px;
     display: flex;
-     justify-content: center;
-     align-items: center;
-     flex-direction: row;
+     /* justify-content: center; */
+
+     /* align-items: center; */
+     flex-direction: column;
+     /* border: 1px solid blue ; */
+     margin-top: 0.5%;
+     margin-right: 5%;
 
 }
 
 .btnStyle{
    margin-right: 2%;
-   
+   margin-top: 1%;
+   width:200px;
+   border-top-right-radius: 30px;
+
+}
+.btnStyleSave{
+   margin-right: 2%;
+   margin-top: 1%;
+   width:400px;
+   border-radius: 30px;
+
+}
+#mainConatiner{
+   display: flex;
+   flex-direction: row;
+   /* background-color: red; */
+   width: 80vw;
+   /* height: 100vh; */
+   box-sizing: border-box;
+   /* align-items: center; */
+   /* justify-content: center; */
+   margin-left: 5%;
+   /* background-color: #fff; */
+   border-radius: 30px;
+  
+}
+#formContainer{
+   width:60%;
+   /* border: 1px solid blue ; */
+  
+}
+#alerts{
+   width:96%;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   /* background-color: black; */
+
 }
