--- a/src/pages/CalendarEvents/styles.css
+++ b/src/pages/CalendarEvents/styles.css
@@ -52,16 +52,42 @@
 }
 #dialogContinaer{
     /* background-color: red; */
-    width: 20vw;
+    width: 30vw;
+    height: 25vw;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content:center;
     align-items: center;
-    height: 20vw;
 }
 #formContinaer{
-    /* background-color: red; */
-    
+    /* background-color: blue; */
+    width: 80%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
+
+#formBtns {
+    /* background-color: green; */
+    width: 50%;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    height: 10%;
+    
+   
+
+}
+#btnStyleSave{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width:100%;
+    border-radius: 30px;
+ 
+ }
 
  
 
